--- a/web/templates/web.css
+++ b/web/templates/web.css
@@ -17,6 +17,7 @@ button.visit {
 	-webkit-border-radius:2px;
 	-o-border-radius:2px;
 	cursor: pointer;
+	color:#3F5164;
 }
 
 button.visit:hover{
@@ -28,8 +29,22 @@ button.visit:hover{
 	background-image:linear-gradient(bottom,#ECECEC,#FBFBFB);
 	border:1px solid #D0D0D0;
 	box-shadow:0px 0px 1px #CCCCCC;
+	color:#212121;
 }
 button.visit img{
 	padding-left:10px;
 	width:26px;
+}
+
+img.button_img {
+	filter: alpha(opacity=65);
+	-ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=65);
+	-moz-opacity: 0.65;
+	opacity: 0.65;
+}
+button.visit:hover img.button_img{
+	filter: alpha(opacity=100);
+	-ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+	-moz-opacity: 1;
+	opacity: 1;
 }
