{MAJ} THEME PHPBoost - Modification nom des class download pour les r?utiliser dans le wiki

--- a/templates/phpboost/modules/download/download.css
+++ b/templates/phpboost/modules/download/download.css
@@ -1,201 +1,20 @@
-.download_entete {
-    margin:auto;
+
+div.pbt_dev_container{ 
+	width:380px;
+	text-align:left;
+	padding-top:5px;
+	margin:auto;
 }
 
-.download_entete_content {
-    text-align:justify;
-    margin-bottom:30px;
-}
-
-.d_custom_content{margin:20px auto 20px auto;}
-
-.d_custom_title{
-	text-align:justify;
-	color:#5f5f5f;
-	font-size:16px;
-	font-family:"Trebuchet MS", Verdana, 'Bitstream Vera Sans', Times, serif;
-	font-weight: bold;
-	margin-bottom: 10px;	
-}
-
-img.download_entete_img{
-	float:left;
-	padding:0px 10px 10px 0px;	
-}
-
-p.download_entete_title{
-	color:#5f5f5f;
-	font-size:20px;
-	font-family:"Trebuchet MS", Verdana, 'Bitstream Vera Sans', Times, serif;
-	font-weight: bold;
-	margin-bottom: 10px;
-}
-
-span.download_entete_desc{ font-style:italic; }
-
-
-div.download_content{
-	padding:10px;
-	margin:20px auto;
-	text-align:center;	
-}
-
-div.d_button_container, div.d_dev_container{ margin:auto; }
-
-div.d_dev_container{ width:380px;text-align:left;padding-top:5px; }
-
-div.d_button{
-	border-radius:2px;
-	-moz-border-radius:2px;
-	-webkit-border-radius:2px;
-	-o-border-radius:2px;
-	display: inline-block;
-	font-weight: bold;
-	line-height: 29px;
-}
-div.d_button:hover{ box-shadow:0px 0px 1px #212121; }
-
-div.d_button_blue{ 
-	background-color:#336397;
-	background-image:-webkit-linear-gradient(bottom,#336397,#3e79af);
-	background-image:-moz-linear-gradient(bottom,#336397,#3e79af);
-	background-image:-ms-linear-gradient(bottom,#336397,#3e79af);
-	background-image:-o-linear-gradient(bottom,#336397,#3e79af);
-	background-image:linear-gradient(bottom,#336397,#3e79af);
-	border:1px solid #284565;
-	margin-right:10px;
-}
-div.d_button_blue:hover{ 
-	background-color:#2F5F93;
-	background-image:-webkit-linear-gradient(bottom,#2F5F93,#3A75AB);
-	background-image:-moz-linear-gradient(bottom,#2F5F93,#3A75AB);
-	background-image:-ms-linear-gradient(bottom,#2F5F93,#3A75AB);
-	background-image:-o-linear-gradient(bottom,#2F5F93,#3A75AB);
-	background-image:linear-gradient(bottom,#2F5F93,#3A75AB);
-	border-color:#1F3C5B;
-}
-
-div.d_button_green{ 
-	background-color:#407635;
-	background-image:-webkit-linear-gradient(bottom,#407635,#5b914f);
-	background-image:-moz-linear-gradient(bottom,#407635,#5b914f);
-	background-image:-ms-linear-gradient(bottom,#407635,#5b914f);
-	background-image:-o-linear-gradient(bottom,#407635,#5b914f);
-	background-image:linear-gradient(bottom,#407635,#5b914f);
-	border:1px solid #26521d;
-	margin-left:10px;
-}
-div.d_button_green:hover{ 
-	background-color:#3C7231;
-	background-image:-webkit-linear-gradient(bottom,#3C7231,#578C4B);
-	background-image:-moz-linear-gradient(bottom,#3C7231,#578C4B);
-	background-image:-ms-linear-gradient(bottom,#3C7231,#578C4B);
-	background-image:-o-linear-gradient(bottom,#3C7231,#578C4B);
-	background-image:linear-gradient(bottom,#3C7231,#578C4B);
-	border-color:#1D4914;
-}
-
-div.d_button_gray{
-	background-color:#F1F1F1;
-	background-image:-webkit-linear-gradient(bottom,#F1F1F1,#FFFFFF);
-	background-image:-moz-linear-gradient(bottom,#F1F1F1,#FFFFFF);
-	background-image:-ms-linear-gradient(bottom,#F1F1F1,#FFFFFF);
-	background-image:-o-linear-gradient(bottom,#F1F1F1,#FFFFFF);
-	background-image:linear-gradient(bottom,#F1F1F1,#FFFFFF);
-	border:1px solid #d9d9d9;
-	margin-left:10px; 
-}
-div.d_button_gray:hover{
-	background-color:#ECECEC;
-	background-image:-webkit-linear-gradient(bottom,#ECECEC,#FBFBFB);
-	background-image:-moz-linear-gradient(bottom,#ECECEC,#FBFBFB);
-	background-image:-ms-linear-gradient(bottom,#ECECEC,#FBFBFB);
-	background-image:-o-linear-gradient(bottom,#ECECEC,#FBFBFB);
-	background-image:linear-gradient(bottom,#ECECEC,#FBFBFB);
-	border:1px solid #D0D0D0;
-	box-shadow:0px 0px 1px #CCCCCC;
-}
-
-p.d_button_title{
-	padding:2px 0px 0px 0px;
-	color:#FFFFFF; 
-	font-size:20px;
-	margin-bottom:0px;
-}
-div.d_button_gray p.d_button_title{ color:#444444;font-size:15px;padding-top: 9px;}
-
-p.d_button_com{
-	padding-top:2px;
-	font-size:11px;
-	margin-bottom:0px;
-	text-align:left;	
-}
-div.d_button_blue p.d_button_com{ color:#C4994D; padding-left:60px; }
-div.d_button_green p.d_button_com{ color:#b3aeae; padding-left:55px; }
-div.d_button_gray p.d_button_com{ color:#b3aeae; text-align:center;}
-
-
-a.d_button_a{
-	display:block;
-	height:50px;
-	padding:6px 6px;
-}
-a.d_button_a:hover{ text-decoration:none; }
-
-div.d_button_blue a.d_button_a{ width:305px; }
-div.d_button_green a.d_button_a{ width:180px; }
-div.d_button_gray a.d_button_a{ height:40px; width:175px; }
-
-img.d_button_img{
-	float:left;
-	filter: alpha(opacity=70);
-	-ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
-	-moz-opacity: 0.70;
-	opacity: 0.70;
-    -webkit-transition: all 0.3s ease-out;
-    -moz-transition: all 0.3s ease-out;
-    -o-transition: all 0.3s ease-out;
-    transition: all 0.3s ease-out;
-    overflow:hidden;
-}
-
-a.d_button_a:hover img.d_button_img{
-	filter: alpha(opacity=100);
-	-ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-	-moz-opacity: 1;
-	opacity: 1;
-	overflow:hidden;
-}
-
-h2.d_custom_subtitle{
+p.pbt_custom_desc{
 	text-align:left;
 	padding-left:56px;
 }
-
-h2.d_custom_subtitle a{
-	font-size:16px;
-	font-family:"Trebuchet MS", Verdana, 'Bitstream Vera Sans', Times, serif;
-	font-weight: bold;	
-}
-
-p.d_custom_exemple{
-	text-align:left;
-	padding-left:56px;
-}
-p.d_custom_exemple, a.d_dev{
+p.pbt_custom_desc, a.pbt_dev{
 	font-style:italic;
 	color:#3F5164;
 	font-weight:normal;	
 }
-a.d_dev:hover{ color:#25466C; text-decoration:none;}
+a.pbt_dev:hover{ color:#25466C; text-decoration:none;}
 
-img.d_custom_img{
-	float:left;	
-	overflow:hidden;
-}
-
-div.d_link_container, div.d_other_container{
-	margin-top:20px;
-	padding:0px 0px 0px 20px;
-	text-align:justify;	
-}
+.pbt_custom_content{ margin:20px auto 20px auto; }
