--- a/templates/phpboost/modules/download/download.css
+++ b/templates/phpboost/modules/download/download.css
@@ -24,3 +24,7 @@ a.pbt_dev:hover{ color:#25466C; text-decoration:none;}
 .pbt_custom_content{ margin:20px auto 20px auto; }
 
 img.left{ float:left; }
+
+div.pbt_button_blue a.pbt_button_a{ width:305px; }
+div.pbt_button_green a.pbt_button_a{ width:180px; }
+div.pbt_button_gray a.pbt_button_a{ width:175px; }
