--- a/templates/phpboost/modules/forum/forum.css
+++ b/templates/phpboost/modules/forum/forum.css
@@ -275,6 +275,7 @@ a.forum_mbrmsg_links { /* Couleur des liens pour les messages du membre */
 	background:url('search.png') no-repeat;
 	padding:3px 0px 0px 25px;	
 	border:none;
+	color:#F8F8F8;
 }
 .forum_nbr_post{ text-align:center; }
 
@@ -334,4 +335,12 @@ span.forum_nbr{
 
 .forum_breadcrumb_topic a{
 	font-size: 16px;
+}
+
+.pbt_button{
+	float: right;
+}
+
+a.pbt_button_add{
+	width:auto;	
 }
