--- a/templates/phpboost/modules/forum/forum.css
+++ b/templates/phpboost/modules/forum/forum.css
@@ -304,7 +304,7 @@ span.forum_nbr{
 	border-top:1px solid #c8d4da;
 	background:#eceffa;
 	margin: 0 4px;
-	height:8px;		
+	min-height:8px;		
 }
 
 .forum_moderation_link{
