--- a/BBCode/templates/bbcode.css
+++ b/BBCode/templates/bbcode.css
@@ -1,7 +1,9 @@
 /** BBcode **/
 /* Tableau du bbcode */
 .bbcode, .bbcode2{
-	border:1px solid;
+	background-color:#336397;
+	color:#FFFFFF;
+	border:1px solid #BEBEBE;
 	border-collapse:collapse;
 	border-spacing:0px;
 	height:32px;
@@ -15,5 +17,16 @@
 
 /* Curseur de la souris au passage sur les icônes */
 .bbcode_hover{ cursor:pointer; }
+
+/* Menu caché du BBcode */
+.bbcode_block{
+	position:absolute;
+	text-align:center;
+	padding:6px 4px;
+	background-color:#87A6BE;
+	border:1px solid #2C5169;
+	bottom:2px; 
+	z-index:100;
+}
 
 .bb_ul { margin-left: 20px; }
