--- a/templates/default/theme/default.css
+++ b/templates/default/theme/default.css
@@ -411,7 +411,7 @@ button.image{
 #imageData #imageDetails{ width:70%; float:left; text-align:left; } 
 #imageData #caption{ font-weight:bold;  }
 #imageData #numberDisplay{ display:block; clear:left; padding-bottom:1.0em; }           
-#imageData #bottomNavClose{ width:66px; float:right;  padding-bottom:0.7em; outline:none;}      
+#imageData #bottomNavClose{ width:66px; position:relative; float:right; padding-bottom:0.7em; outline:none;}      
 
 #overlay{ position:absolute; top:0; left:0; z-index:102; width:100%; height:500px; background-color:#000; }
 
