--- a/articles/templates/articles.css
+++ b/articles/templates/articles.css
@@ -261,7 +261,7 @@ span.caret{
 
 .article_content_list_view .article_tags {
 	margin:0;
-	padding:10px 0 0 0;
+	padding:10px 0 0 10px;
 	font-size:10px;
 	font-style:italic;
 }
